--- a/RealmModelGenerator/PopUpCell.xib
+++ b/RealmModelGenerator/PopUpCell.xib
@@ -20,7 +20,7 @@
                     <rect key="frame" x="-2" y="4" width="234" height="26"/>
                     <popUpButtonCell key="cell" type="check" title="Item 1" bezelStyle="regularSquare" imagePosition="left" alignment="left" lineBreakMode="truncatingTail" state="on" allowsMixedState="YES" inset="2" selectedItem="fdD-mS-1KG" id="2Nf-Wh-0xn">
                         <behavior key="behavior" changeContents="YES" doesNotDimImage="YES" lightByContents="YES"/>
-                        <font key="font" size="11" name=".AppleSystemUIFont"/>
+                        <font key="font" size="11" name="Menlo-Regular"/>
                         <menu key="menu" id="mPg-Jx-A7p">
                             <items>
                                 <menuItem title="Item 1" state="on" id="fdD-mS-1KG"/>
