--- a/RealmModelGenerator/RelationshipDetailView.xib
+++ b/RealmModelGenerator/RelationshipDetailView.xib
@@ -53,7 +53,7 @@
                     <rect key="frame" x="93" y="442" width="152" height="26"/>
                     <popUpButtonCell key="cell" type="push" title="No Value" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="wNe-OK-bVx" id="0hP-Lm-KYQ">
                         <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
-                        <font key="font" size="11" name=".AppleSystemUIFont"/>
+                        <font key="font" size="11" name="Menlo-Regular"/>
                         <menu key="menu" id="ydV-sN-EOo">
                             <items>
                                 <menuItem title="No Value" state="on" id="wNe-OK-bVx"/>
