--- a/RealmModelGenerator/RelationshipsView.xib
+++ b/RealmModelGenerator/RelationshipsView.xib
@@ -53,19 +53,19 @@
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
-                <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="30" horizontalPageScroll="10" verticalLineScroll="30" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9S-t2-oc8">
+                <scrollView borderType="none" autohidesScrollers="YES" horizontalLineScroll="24" horizontalPageScroll="10" verticalLineScroll="24" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N9S-t2-oc8">
                     <rect key="frame" x="8" y="29" width="384" height="136"/>
                     <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="03N-TJ-Hed">
                         <rect key="frame" x="0.0" y="0.0" width="384" height="136"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="30" headerView="xX4-yD-Dk9" viewBased="YES" floatsGroupRows="NO" id="lNB-g1-Tiv">
+                            <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" multipleSelection="NO" autosaveColumns="NO" rowHeight="24" headerView="xX4-yD-Dk9" viewBased="YES" floatsGroupRows="NO" id="lNB-g1-Tiv">
                                 <rect key="frame" x="0.0" y="0.0" width="384" height="113"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                 <tableColumns>
-                                    <tableColumn identifier="relationship" width="150" minWidth="40" maxWidth="1000" id="tmm-lp-8v8" userLabel="attribute">
+                                    <tableColumn identifier="relationship" width="150" minWidth="40" maxWidth="1000" id="tmm-lp-8v8">
                                         <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Relationship">
                                             <font key="font" metaFont="smallSystem"/>
                                             <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
