--- a/RealmModelGenerator/TitleCell.xib
+++ b/RealmModelGenerator/TitleCell.xib
@@ -18,7 +18,7 @@
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="ApS-rj-fAc">
-                    <rect key="frame" x="32" y="8" width="219" height="17"/>
+                    <rect key="frame" x="32" y="9" width="219" height="17"/>
                     <textFieldCell key="cell" controlSize="small" lineBreakMode="truncatingTail" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" title="Title" id="ieK-RM-G6c">
                         <font key="font" size="11" name="Menlo-Regular"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
@@ -50,7 +50,7 @@
                 </textField>
             </subviews>
             <constraints>
-                <constraint firstItem="ApS-rj-fAc" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="7w0-FB-lsf"/>
+                <constraint firstItem="ApS-rj-fAc" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" constant="-1.5" id="7w0-FB-lsf"/>
                 <constraint firstItem="BzI-NG-lrh" firstAttribute="centerY" secondItem="c22-O7-iKe" secondAttribute="centerY" id="Nec-CO-4ZY"/>
                 <constraint firstItem="BzI-NG-lrh" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" constant="8" id="fgK-63-iOw"/>
                 <constraint firstAttribute="trailing" secondItem="ApS-rj-fAc" secondAttribute="trailing" constant="8" id="key-ah-ZIX"/>
